--- a/.github/workflows/build_latex.yml
+++ b/.github/workflows/build_latex.yml
@@ -5,6 +5,8 @@ on:
   pull_request:
     branches: ["main"]
 
+permissions: write-all # Required to create releases
+
 jobs:
   build_latex:
     runs-on: ubuntu-latest
@@ -25,3 +27,13 @@ jobs:
         with:
           name: compiled-pdf
           path: main.pdf
+
+      - name: Upload PDF to Release
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: latest      # We'll overwrite this tag every time
+          files: main.pdf
+          draft: false
+          prerelease: false
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
